; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/console/extr_serial_general.c_switch_to_old_console.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/console/extr_serial_general.c_switch_to_old_console.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@switch_to_old_console.squawked = internal global i64 0, align 8
@nconsops = common dso_local global i64 0, align 8
@TRUE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [39 x i8] c"switch_to_old_console: unknown ops %d\0A\00", align 1
@cons_ops_index = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @switch_to_old_console(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = sext i32 %4 to i64
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* @nconsops, align 8
  %8 = icmp sge i64 %6, %7
  br i1 %8, label %9, label %16

9:                                                ; preds = %1
  %10 = load i64, i64* @switch_to_old_console.squawked, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %16, label %12

12:                                               ; preds = %9
  %13 = load i64, i64* @TRUE, align 8
  store i64 %13, i64* @switch_to_old_console.squawked, align 8
  %14 = load i64, i64* %3, align 8
  %15 = call i32 @printf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i64 %14)
  br label %18

16:                                               ; preds = %9, %1
  %17 = load i64, i64* %3, align 8
  store i64 %17, i64* @cons_ops_index, align 8
  br label %18

18:                                               ; preds = %16, %12
  ret void
}

declare dso_local i32 @printf(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
